k8s/backup-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backup-service
  namespace: cse474-prod
  labels:
    app: backup-service
spec:
  type: ClusterIP
  selector:
    app: backup-service
  ports:
    - name: http
      port: 3008
      targetPort: 3008
