k8s/compression-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compression-service
  namespace: cse474-prod
  labels:
    app: compression-service
spec:
  type: ClusterIP
  selector:
    app: compression-service
  ports:
    - name: http
      port: 3004
      targetPort: 3004
