k8s/metrics-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  namespace: cse474-prod
  labels:
    app: metrics-service
spec:
  type: ClusterIP
  selector:
    app: metrics-service
  ports:
    - name: http
      port: 3001
      targetPort: 3001
