k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: cse474-prod
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
