k8s/preview-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preview-service
  namespace: cse474-prod
  labels:
    app: preview-service
spec:
  type: ClusterIP
  selector:
    app: preview-service
  ports:
    - name: http
      port: 3003
      targetPort: 3003
