k8s/scheduler-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler-service
  namespace: cse474-prod
  labels:
    app: scheduler-service
spec:
  type: ClusterIP
  selector:
    app: scheduler-service
  ports:
    - name: http
      port: 3006
      targetPort: 3006
