k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
spec:
  selector:
    app: metrics-service
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
