k8s/webhook-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: cse474-prod
  labels:
    app: webhook-service
spec:
  type: ClusterIP
  selector:
    app: webhook-service
  ports:
    - name: http
      port: 3005
      targetPort: 3005
