k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pm3-microservices
  namespace: cse474-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: pm3.local
      http:
        paths:
          - path: /metrics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: metrics-service
                port:
                  number: 3001
          - path: /notification(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 3002
          - path: /preview(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: preview-service
                port:
                  number: 3003
          - path: /compression(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: compression-service
                port:
                  number: 3004
          - path: /webhook(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: webhook-service
                port:
                  number: 3005
          - path: /scheduler(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: scheduler-service
                port:
                  number: 3006
          - path: /access-analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: access-analytics-service
                port:
                  number: 3007
          - path: /backup(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backup-service
                port:
                  number: 3008
